package br.com.app.ageplan.entity;

public class Matricula {
}