@startuml


entity Usuario {
    - id: Long
    - nomeUsuario: String
    - senha: String
    - email: String
    - dataHoraCriacao: LocalDateTime
    - dataHoraUltimoAcesso: LocalDateTime
    - dataHoraUltimaAlteracao: LocalDateTime
    - dataHoraExclusao: LocalDateTime
    - situacao: String
}



abstract class Pessoa {
    - id: Long
    - nomeCompleto: String
    - dataNascimento: Date
    - genero: String
    - estrangeiro: Boolean
    - CPF: String
    - RG: String
    - outrosDocumentos: String
    - telefoneCelular: String
    - telefoneFixo: String
    - endereco: Endereco
    - escolaridade: Escolaridade
    - orgaoInstituicaoEmpresa: OrgaoInstituicaoEmpresa
}

class Endereco {
    - id: Long
    - CEP: String
    - TipoLogradouro: TipoLogradouro
    - nomeLogradouro: String
    - numero: Integer
    - complemento: String
    - bairro: String
    - cidade: String
    - estado: String
    - pais: String
}

class TipoLogradouro {
    - id: Long
    - nomeTipoLogradouro: String
}

class Escolaridade {
    - id: Long
    - nomeDescricao: String
}

class NivelSerieEscolaridade {
    - id: Long
    - nomeDescricao: String
}

class OrgaoInstituicaoEmpresa {
    - id: Long
    - nomeDescricao: String
}

class ProfissaoCargoFuncao {
    - id: Long
    - nomeDescricao: String
}


class Contrato {
   - id: Long
   - situacao: String
   - dataInicio: Date
   - dataTermino: Date
   - dataCancelamento: Date
   - dataTrancamento: Date
   - contratante: Pessoa
}

class Matricula {
   - id: Long
   - atual: Boolean
   - dataInicio: Date
   - dataTermino: Date
   - professor: Pessoa
}

class Curso {
   - id: Long
   - nome: String
   - descricao: String
   - cargaHoraria: Integer
   - nivelSerieEscolaridade: NivelSerieEscolaridade
}

Pessoa "1" -- "1" Contrato
Contrato "1" -- "1" Matricula
Matricula "1" -- "1" Curso

Pessoa "*" - "1" Endereco
Pessoa "*" - "1" Escolaridade
Pessoa "*" - "1" NivelSerieEscolaridade
Pessoa "*" - "1" OrgaoInstituicaoEmpresa
Usuario <|- Pessoa
Endereco "*" -- "1" TipoLogradouro

class Professor {
    - id: Long
    - especialidade: String
}

class Aluno {
    - id: Long
    - profissaoCargoFuncao: ProfissaoCargoFuncao
    - contrato: Contrato
}

Aluno "*" -- "1" ProfissaoCargoFuncao

class Administrador {
    - id: Long
}

class Financeiro {
    - id: Long
}

Pessoa <|-- Aluno
Pessoa <|-- Professor
Pessoa <|-- Administrador
Pessoa <|-- Financeiro

class Role {
    - id: Long
    - nome: String
}

'Classe associativa para relacionamento N:N entre Usuario e Role
class UsuarioRole {
    - id: Long
    - usuario: Usuario
    - role: Role
}

Usuario "1" -- "*" UsuarioRole
Role "1" -- "*" UsuarioRole



@enduml